Bug 55244 - Cursor artifacts in eclipse-4.2 editor [sna]
Summary: Cursor artifacts in eclipse-4.2 editor [sna]
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-23 14:49 UTC by Clemens Eisserer
Modified: 2013-06-25 13:25 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
screenshot (753.02 KB, image/png)
2012-09-23 18:22 UTC, Clemens Eisserer
no flags Details

Description Clemens Eisserer 2012-09-23 14:49:44 UTC
Since eclipse has auto-updated itself to 4.2, I get cursor artifacts when selecting text in the source-code editor on my gen6-based laptop with SNA enabled.

Although the artifact is clearly visible on screen, its not visible on screenshots.
Comment 1 Clemens Eisserer 2012-09-23 14:53:04 UTC
I've created a video - unfourtunatly quality is very poor and the leftovers caused by the cursors are barely visible.  (sound can be ignored, recorded at a conference talk): http://youtu.be/fkFuzZKKObs
Comment 2 Chris Wilson 2012-09-23 15:00:19 UTC
I can't make out what you are trying to show me in the video. Is the artifact in the selection region or the cursor itself?

And of course it helps if we clarify which cursor you mean. The hardware mouse cursor or the keyboard input cursor?
Comment 3 Chris Wilson 2012-09-23 15:01:53 UTC
Heh, and we might have to wait a while before eclipse-4.2 hits debian ;-)
Comment 4 Clemens Eisserer 2012-09-23 18:22:57 UTC
Created attachment 67587 [details]
screenshot
Comment 5 Clemens Eisserer 2012-09-23 18:28:48 UTC
sorry for the sloppy bug-report, I thought the screenshot would make it all clear - which I forgot to attach ;)

There are left-overs from the text-input cursor (looks like XOR rendering).

If you are interested, pre-compiled ready-to-run binaries are available at: http://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/juno/R/eclipse-java-juno-linux-gtk-x86_64.tar.gz

Thanks, Clemens
Comment 6 Chris Wilson 2012-10-03 10:49:03 UTC
Ok, finally had a chance to being to look at this and running the 4.2 package you pointed me at, thanks.

The selection rendering looks dependent upon the theme, can you tell me which GTK+ theme you are using?
Comment 7 Chris Wilson 2012-10-03 10:56:09 UTC
Clemens, can you also check that this isn't fixed already on master? I can hope :)
Comment 8 Clemens Eisserer 2012-10-03 18:58:21 UTC
As I haven't seen this issue after updating eclipse to "4.2.1" (don't think they call it like that), so although I didn't see it with UXA - its now gone under SNA as well :)

Although it could be a magical fix in master as well ;)

As always, thanks a lot
Comment 9 Chris Wilson 2012-10-03 21:26:22 UTC
Ok closing as worksforme until we can reproduce again, and just assume that this was fixed along with one of the other bugs, thanks.
Comment 10 Clemens Eisserer 2013-06-24 21:32:10 UTC
Ok, this bug was revived from the dead on my SNB laptop by commit:

[b3d1118bbee1172f72c946163a37ca4ad5feecce] sna: Promote the CopyArea to the GPU if it subsumes the CPU damage
Comment 11 Chris Wilson 2013-06-24 21:53:32 UTC
On the positive side, now I might be able to track this down and fix it for real. :(
Comment 12 Chris Wilson 2013-06-24 22:00:36 UTC
Is this bug limited to your snb machine?
Comment 13 Chris Wilson 2013-06-24 22:01:16 UTC
(And debian is still only on 3.8!)
Comment 14 Clemens Eisserer 2013-06-24 22:03:33 UTC
> Is this bug limited to your snb machine?
I currently do not have another system to test - will re-setup my arrandale machine in a few hours.

> (And debian is still only on 3.8!)
For a good reason ;)
Binary packages are quite ok, however.
Comment 15 Chris Wilson 2013-06-24 22:39:48 UTC
I can see an occasional residual cursor in the highlighted section on eclipse-3.8 and SNB. Will rebuild with debugging enabled and see if I can spot what is going on.
Comment 16 Clemens Eisserer 2013-06-24 22:58:58 UTC
just tested - the issue is also reproduceable on my i5 540M.

The easiest was to reproduce it is to position the cursor at the end of a line and slowly move the mouse to the left, therefore slowly selecting more and more of the line from right to left.
Comment 17 Chris Wilson 2013-06-25 13:12:26 UTC
Slightly different result:

94cbe7bf7b7acc9a7f2cb56c5e275af028f3cdc8 is the first bad commit
commit 94cbe7bf7b7acc9a7f2cb56c5e275af028f3cdc8
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Jun 20 19:40:44 2013 +0100

    sna: Mark overwriting CopyArea as not needing the dst damage
Comment 18 Chris Wilson 2013-06-25 13:25:48 UTC
commit 2e2c448a77ab9dce4807b159708290cd7ad26b5c
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Jun 25 14:22:28 2013 +0100

    sna: Don't flag IGNORE_CPU for partial overwritten blocks
    
    As we set the flags for the migration extents, but only operate upon the
    boxes in the region, we need to be careful to be sure to migrate data
    outside of the boxes overwritten.
    
    Fixes regression from
    commit 94cbe7bf7b7acc9a7f2cb56c5e275af028f3cdc8 [2.21.10]
    Author: Chris Wilson <chris@chris-wilson.co.uk>
    Date:   Thu Jun 20 19:40:44 2013 +0100
    
        sna: Mark overwriting CopyArea as not needing the dst damage
    
    If we start passing around regions rather than extents, we coud do
    finergrained migration decision.
    
    Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=55244
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.